# mira

./: .gitignore  README.md  pyproject.toml  requirements.txt
log/: README.md  test_clap_allresults.csv  test_clap_clap.csv  test_clap_defnet.csv
mira_eval/: clap.py  coverid.py  defnet.py  kld.py
mira_eval/kldiv/: kld_metric.py
misc/: README.md
src/mira_sim/: __init__.py  main.py
src/mira_sim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mira_sim/metrics/: __init__.py  clap.py  coverid.py  defnet.py  kld.py
